# rpc-nodes-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  claude_desktop_config.json  digest.txt  main_evm.py  main_pumpfun.py  main_solana.py  mcp-config.json  mcp.json  pyproject.toml
scripts/: README.md  generate_mcp_tools.py  run_mcp_client_example.py
scripts/openapi_specs/ethereum/: ethereum.json
scripts/openapi_specs/solana/: solana.json
src/: client_example.py  main.py  main_evm.py  main_solana.py
src/chains/: arbitrum.py  base.py  binance_smart_chain.py  ethereum.py  evm.py  solana.py  sonic.py
src/common/: config.py  interfaces.py  logger.py  rpc.py  utils.py
src/core/: adapter_registry.py  client.py  interfaces.py  rpc.py
src/servers/evm/: evm.py  main.py  server.py  tool_registry.py
src/servers/evm/chains/: __init__.py  arbitrum.py  base.py  binance_smart_chain.py  ethereum.py  sonic.py
src/servers/evm/common/: __init__.py  adapter_registry.py  client.py  interfaces.py
src/servers/evm/prompts/: __init__.py  transaction.py
src/servers/evm/tools/: __init__.py  json_rpc_methods.py  transaction.py  utilities.py
src/servers/pumpfun/: server.py  tool_registry.py
src/servers/pumpfun/tools/: __init__.py  pumpfun_utilities.py
src/servers/solana/: server.py  solana.py  tool_registry.py
src/servers/solana/chains/: solana.py
src/servers/solana/common/: __init__.py  adapter_registry.py  client.py  interfaces.py
src/servers/solana/tools/: __init__.py  json_rpc_methods.py  pumpfun_utilities.py  utilities.py
src/tools/: transaction.py
tests/: test_client.py  test_ethereum_adapter.py  test_mcp_ethereum_tools.py  test_mcp_solana_tools.py  test_solana_adapter.py  test_tools.py
